[gd_scene load_steps=14 format=3 uid="uid://dve5kuoqdo8bg"]

[ext_resource type="Texture2D" uid="uid://bvam0fxhydvbt" path="res://assets/subarea room/nextwavesigil.png" id="1_d3n8y"]
[ext_resource type="Script" path="res://scripts/next_wave_sigil.gd" id="2_ihcd2"]
[ext_resource type="Texture2D" uid="uid://bx5di3ytq36xl" path="res://assets/subarea room/deactivatedsigil.png" id="2_r2fnj"]
[ext_resource type="PackedScene" uid="uid://d2wj23eg2272h" path="res://prefabs/ui elements/interact_ui.tscn" id="4_jk4il"]

[sub_resource type="Animation" id="Animation_5qbsm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_d3n8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5xqxw"]
resource_name = "activated"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_d3n8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6w8hl"]
resource_name = "charging"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_d3n8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.804, 2, 2, 1)]
}

[sub_resource type="Animation" id="Animation_1je8a"]
resource_name = "deactivated"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_r2fnj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q8s48"]
resource_name = "glowing"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_d3n8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.572549, 0.572549, 0.572549, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfa0o"]
_data = {
"RESET": SubResource("Animation_5qbsm"),
"activated": SubResource("Animation_5xqxw"),
"charging": SubResource("Animation_6w8hl"),
"deactivated": SubResource("Animation_1je8a"),
"glowing": SubResource("Animation_q8s48")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ahsxc"]
radius = 68.0372

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0phn"]
bg_color = Color(0.0980392, 0.0352941, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1snx"]
bg_color = Color(0.556863, 0.580392, 0.811765, 1)

[node name="NextWaveSigil" type="Sprite2D"]
scale = Vector2(4, 4)
texture = ExtResource("1_d3n8y")
script = ExtResource("2_ihcd2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vfa0o")
}

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ahsxc")

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 300
lifetime = 5.0
speed_scale = 2.0
randomness = 0.35
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
radial_accel_min = 10.0
radial_accel_max = 10.0
angle_min = 360.0
angle_max = 360.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.647059, 0.866667, 0.968627, 1)
hue_variation_min = 0.19
hue_variation_max = 0.87

[node name="Timer" type="Timer" parent="."]

[node name="InteractUI" parent="." instance=ExtResource("4_jk4il")]
visible = false

[node name="HoldUI" type="CanvasLayer" parent="."]
visible = false

[node name="ProgressBar" type="ProgressBar" parent="HoldUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_top = 19.0
offset_right = 177.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_d0phn")
theme_override_styles/fill = SubResource("StyleBoxFlat_b1snx")
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
